Colaboratory を使用して作成しました

--- a/imctf2021.ipynb
+++ b/imctf2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1vaJW_nyKT_hDW47XMKpDDLtYCGmw7a5N",
-      "authorship_tag": "ABX9TyOYJ3sma5Raa9g5ZqHdDBni",
+      "authorship_tag": "ABX9TyO13oqMPxb/h6CH19GnBDAq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,206 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "fRYFeAEaTK6S"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "ciphertext = \"6157316a64475a374d484a6c4d484a6c58324e79655842304d4639706331397a6458426c636c397a5a574e31\""
+        "#web"
+      ],
+      "metadata": {
+        "id": "t_X3M8d4AQxK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##can you see cookie?"
+      ],
+      "metadata": {
+        "id": "gQLH1682AUL9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cookieを調べてみる"
+      ],
+      "metadata": {
+        "id": "xrdXGo4NAwLz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!curl -i http://104.196.236.136:31909"
+      ],
+      "metadata": {
+        "id": "4rkqiJFOAWlA",
+        "outputId": "6f812e62-bf6b-4010-a4a7-1bc8b735e303",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HTTP/1.1 200 OK\r\n",
+            "Server: nginx/1.21.4\r\n",
+            "Date: Fri, 24 Dec 2021 15:14:39 GMT\r\n",
+            "Content-Type: text/html\r\n",
+            "Content-Length: 3043\r\n",
+            "Last-Modified: Mon, 13 Dec 2021 03:04:20 GMT\r\n",
+            "Connection: keep-alive\r\n",
+            "ETag: \"61b6b834-be3\"\r\n",
+            "Accept-Ranges: bytes\r\n",
+            "\r\n",
+            "<!doctype html><html lang=\"en\"><head><meta charset=\"utf-8\"/><link rel=\"icon\" href=\"/favicon.ico\"/><meta name=\"viewport\" content=\"width=device-width,initial-scale=1\"/><meta name=\"theme-color\" content=\"#000000\"/><meta name=\"description\" content=\"Web site created using create-react-app\"/><link rel=\"apple-touch-icon\" href=\"/logo192.png\"/><link rel=\"manifest\" href=\"/manifest.json\"/><title>can you see 🍪?</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id=\"root\"></div><style>body,html{margin:0;height:100%;width:100%}</style><script>!function(e){function r(r){for(var n,i,a=r[0],c=r[1],l=r[2],s=0,p=[];s<a.length;s++)i=a[s],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(f&&f(r);p.length;)p.shift()();return u.push.apply(u,l||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var c=t[a];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=i(i.s=t[0]))}return e}var n={},o={1:0},u=[];function i(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,i),t.l=!0,t.exports}i.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,a=document.createElement(\"script\");a.charset=\"utf-8\",a.timeout=120,i.nc&&a.setAttribute(\"nonce\",i.nc),a.src=function(e){return i.p+\"static/js/\"+({}[e]||e)+\".\"+{3:\"97112ec8\"}[e]+\".chunk.js\"}(e);var c=new Error;u=function(r){a.onerror=a.onload=null,clearTimeout(l);var t=o[e];if(0!==t){if(t){var n=r&&(\"load\"===r.type?\"missing\":r.type),u=r&&r.target&&r.target.src;c.message=\"Loading chunk \"+e+\" failed.\\n(\"+n+\": \"+u+\")\",c.name=\"ChunkLoadError\",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:\"timeout\",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(r)},i.m=e,i.c=n,i.d=function(e,r,t){i.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},i.r=function(e){\"undefined\"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\"Module\"}),Object.defineProperty(e,\"__esModule\",{value:!0})},i.t=function(e,r){if(1&r&&(e=i(e)),8&r)return e;if(4&r&&\"object\"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(i.r(t),Object.defineProperty(t,\"default\",{enumerable:!0,value:e}),2&r&&\"string\"!=typeof e)for(var n in e)i.d(t,n,function(r){return e[r]}.bind(null,n));return t},i.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(r,\"a\",r),r},i.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},i.p=\"/\",i.oe=function(e){throw console.error(e),e};var a=this[\"webpackJsonpcan-you-see-cookie\"]=this[\"webpackJsonpcan-you-see-cookie\"]||[],c=a.push.bind(a);a.push=r,a=a.slice();for(var l=0;l<a.length;l++)r(a[l]);var f=c;t()}([])</script><script src=\"/static/js/2.789fecdc.chunk.js\"></script><script src=\"/static/js/main.40252036.chunk.js\"></script></body></html>"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ない\n",
+        "\n",
+        "よくみると・・・\n",
+        "\n",
+        "<pre>You need to enable JavaScript to run this app.</pre>\n",
+        "\n",
+        "と書いてある\n"
+      ],
+      "metadata": {
+        "id": "pwUH5X89A0oD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "さらに\n",
+        "\n",
+        "<pre>\n",
+        "script src=\"/static/js/2.789fecdc.chunk.js\"\n",
+        "script src=\"/static/js/main.40252036.chunk.js\"\n",
+        "</pre>\n",
+        "\n",
+        "などと記載があるので調べたところ"
+      ],
+      "metadata": {
+        "id": "zQg2Xz4bQmjg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "r = requests.get('http://104.196.236.136:31909/static/js/main.40252036.chunk.js')\n",
+        "r.text"
+      ],
+      "metadata": {
+        "id": "_CWauVALPgso",
+        "outputId": "236a5554-6661-41bd-d88b-0608f130896a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 157
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'(this[\"webpackJsonpcan-you-see-cookie\"]=this[\"webpackJsonpcan-you-see-cookie\"]||[]).push([[0],{9:function(e,n,t){\"use strict\";t.r(n);var c=t(1),i=t.n(c),o=t(3),s=t.n(o),l=t.p+\"static/media/cookies.09ddddb3.jpg\",a=t(0);var r=function(){return document.cookie=decodeURIComponent(escape(atob(\"ZmxhZz1jblZ1WDNKMWJsOXlkVzVmWVhOZlptRnpkRjk1YjNWZlkyRnVJUT09\"))),Object(a.jsxs)(\"div\",{className:\"App\",style:{textAlign:\"center\",display:\"flex\",flexDirection:\"column\"},children:[Object(a.jsx)(\"header\",{className:\"App-header\",style:{backgroundColor:\"#282c34\",minHeight:\"10vh\",display:\"flex\",flexDirection:\"column\",alignItems:\"center\",justifyContent:\"center\",fontSize:\"calc(10px + 2vmin)\",color:\"white\"},children:\"can you see \\\\ud83c\\\\udf6a?\"}),Object(a.jsx)(\"main\",{style:{flexGrow:1},children:Object(a.jsx)(\"img\",{src:l,style:{width:\"80%\",margin:\"5% 10%\",borderRadius:\"0.2pc\"},alt:\"\"})}),Object(a.jsx)(\"footer\",{style:{backgroundColor:\"#282c34\",minHeight:\"10vh\",display:\"flex\",flexDirection:\"column\",alignItems:\"center\",justifyContent:\"center\",fontSize:\"calc(10px + 2vmin)\",color:\"white\"},children:\"Iron Maiden CTF\"})]})},d=function(e){e&&e instanceof Function&&t.e(3).then(t.bind(null,10)).then((function(n){var t=n.getCLS,c=n.getFID,i=n.getFCP,o=n.getLCP,s=n.getTTFB;t(e),c(e),i(e),o(e),s(e)}))};s.a.render(Object(a.jsx)(i.a.StrictMode,{children:Object(a.jsx)(r,{style:{margin:0,padding:0,fontFamily:\"-apple-system, BlinkMacSystemFont, \\'Segoe UI\\', \\'Roboto\\', \\'Oxygen\\', \\'Ubuntu\\', \\'Cantarell\\', \\'Fira Sans\\', \\'Droid Sans\\', \\'Helvetica Neue\\', sans-serif\"}})}),document.getElementById(\"root\")),d()}},[[9,1,2]]]);\\n//# sourceMappingURL=main.40252036.chunk.js.map'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<pre>document.cookie=decodeURIComponent(escape(atob(\"ZmxhZz1jblZ1WDNKMWJsOXlkVzVmWVhOZlptRnpkRjk1YjNWZlkyRnVJUT09\")</pre>\n",
+        "\n",
+        "Cookieを設定している様子"
+      ],
+      "metadata": {
+        "id": "r8r0UKEgP3A3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import base64\n",
+        "\n",
+        "cookie = \"ZmxhZz1jblZ1WDNKMWJsOXlkVzVmWVhOZlptRnpkRjk1YjNWZlkyRnVJUT09\"\n",
+        "\n",
+        "base64.b64decode(cookie)\n"
+      ],
+      "metadata": {
+        "id": "z52WfW9IQIK3",
+        "outputId": "974a8297-d715-467a-c498-1c958c472a2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "b'flag=cnVuX3J1bl9ydW5fYXNfZmFzdF95b3VfY2FuIQ=='"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flag = \"cnVuX3J1bl9ydW5fYXNfZmFzdF95b3VfY2FuIQ==\"\n",
+        "\n",
+        "base64.b64decode(flag)"
+      ],
+      "metadata": {
+        "id": "LalDiI6_QY2l",
+        "outputId": "a651001b-86a6-43d0-8a08-b0e5cd937e3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "b'run_run_run_as_fast_you_can!'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "JavaScriptが動かせればもっと簡単？"
+      ],
+      "metadata": {
+        "id": "Z48M4LSQIWnr"
+      }
     },
     {
       "cell_type": "markdown",
@@ -48,6 +239,84 @@
       "metadata": {
         "id": "QcJbkc0FzYdH"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##oreore"
+      ],
+      "metadata": {
+        "id": "Mdw4NMaBIqza"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "fRYFeAEaTK6S"
+      },
+      "outputs": [],
+      "source": [
+        "ciphertext = \"6157316a64475a374d484a6c4d484a6c58324e79655842304d4639706331397a6458426c636c397a5a574e31\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bytes.fromhex(ciphertext).decode()"
+      ],
+      "metadata": {
+        "id": "QDwiv26pAQMJ",
+        "outputId": "7d2e7543-2574-4bc2-eb5a-b24c0ce507a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'aW1jdGZ7MHJlMHJlX2NyeXB0MF9pc19zdXBlcl9zZWN1'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import base64\n",
+        "\n",
+        "base64.b64decode(bytes.fromhex(ciphertext).decode())"
+      ],
+      "metadata": {
+        "id": "JPaTpfmDOnJv",
+        "outputId": "f1c8c73f-a479-4a0c-d835-5395c49ccbe4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "b'imctf{0re0re_crypt0_is_super_secu'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -90,7 +359,7 @@
       "metadata": {
         "id": "RVEWWBgITR7Z"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +388,7 @@
       "metadata": {
         "id": "8_JlIUOPYYyr"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +401,7 @@
       "metadata": {
         "id": "F73MxTEBYsA3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +412,7 @@
       "metadata": {
         "id": "whVq1xw_Z1Dj"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +428,7 @@
         "id": "VkghcLL1anfJ",
         "outputId": "94a089e6-2a3f-4ebb-bea4-5ba5f066788b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +455,7 @@
         "id": "4AtMB-CUbJpv",
         "outputId": "6df882e7-c02a-40f0-a926-3988f8d0b56e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +484,7 @@
         "id": "hy5Ssch1bUar",
         "outputId": "cad1166a-d175-491e-886a-2a3fb92e6abf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,7 +524,7 @@
         "id": "RvpAqsG6b42h",
         "outputId": "b25900c1-ec14-4842-d2b4-4104b0acbaee"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +572,7 @@
         "id": "pqm3q6RPj9mi",
         "outputId": "5718364f-7342-4981-b564-e9250fa4a96a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +601,7 @@
         "id": "bFH0pVMfkNPC",
         "outputId": "606a19f9-cc97-4865-d4d6-9c602dc46e5d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +639,7 @@
         "id": "0xaz_jXakbAa",
         "outputId": "b8c406b3-d312-47ce-9367-5f7f8c70c2cb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +679,7 @@
         "id": "34LXxANRkwhQ",
         "outputId": "321f2de2-c0e2-4856-bf55-80420548c8d7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +731,7 @@
         "id": "3oA5xdtp3DJG",
         "outputId": "2471ee4d-1aa9-492b-9c3b-4952c5282276"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +763,7 @@
         "id": "HIIWKpj43bzs",
         "outputId": "6040462b-abec-4401-c247-9e25710cc97a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +905,7 @@
         "id": "OQGtGG7EQQhs",
         "outputId": "1c52f851-b329-4da0-8da3-07f9a8769f0e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +944,7 @@
         "id": "yMew9jDhKtc-",
         "outputId": "8761006d-e90e-41e2-840b-d752629e434d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +981,7 @@
         "id": "fPbn99LZLv7Q",
         "outputId": "27f52cfc-aee1-4b40-9c15-f637bceda813"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +1025,7 @@
         "id": "E3R6JOMblvje",
         "outputId": "71c328dd-48aa-4df7-997e-44712d8e6714"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
