Colaboratory を使用して作成しました

--- a/SECCON_2022.ipynb
+++ b/SECCON_2022.ipynb
@@ -79,7 +79,7 @@
       "source": [
         "eが偶数なので次のように展開できる。\n",
         "\n",
-        ">$c2 = (p-q)^{e} = p^{e} +\\displaystyle \\sum_{i,j}^{0<i,j<e}x_{ij}p^iq^j+q^{e}$\n",
+        ">$c2=(p-q)^{e}=p^{e}+\\sum_{i,j}^{0<i,j<e}x_{ij}p^iq^j+q^e $\n",
         "\n",
         "※ポイントは$q^{e}$の前が「＋」になる部分。\n",
         "\n",
@@ -444,7 +444,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYtQx6o1v2LC8uFDRyc4fh",
+      "authorship_tag": "ABX9TyOxp7QxWvVPxsOjTrHlgErr",
       "include_colab_link": true
     },
     "kernelspec": {
