Colaboratory を使用して作成しました

--- a/SECCON_2022.ipynb
+++ b/SECCON_2022.ipynb
@@ -168,7 +168,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "法が奇素数である平方余剰は簡単に計算できるらしいので、下のURLのソースをパクって対応。\n",
+        "法が奇素数である平方剰余は簡単に計算できるらしいので、下のURLのソースをパクって対応。\n",
         "\n",
         "https://rosettacode.org/wiki/Tonelli-Shanks_algorithm#Python"
       ],
@@ -444,7 +444,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN96CrEUdWcjlvcXHh/9EaR",
+      "authorship_tag": "ABX9TyPjElzDeF7jm4Gci7EkXDU3",
       "include_colab_link": true
     },
     "kernelspec": {
